--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <main> 
-        <h1> Generate a <br> <span>random password</span> 
+        <h1> Generate a <br> <span class="emphasize" >random password</span> 
         </h1>
         <h3>Never use an insecure password again.</h3>
         
